- Fixed bug where wxDateTime::Now() would sometimes return an incorrect value
  the first time it was called.

All (GUI):

- In wxScrolledWindow:DoGetBestSize, no longer adds difference between client and
  total size if we've just used the total size as the best size.
- Fixed problem with zoom setting in print preview.
- Fixed middle click events generation in generic wxTreeCtrl (Olly Betts)

wxGTK:

- Support underlined fonts in wxTextCtrl.
- wxWindow and wxScrolledWindow now generate line, page and thumb-release scroll events.
- Make Update() work on native controls (Alex Bligh).
- Implemented SetLineSize and GetLineSize for wxSlider.

wxUniv:

- Implemented wxToggleButton (David Bjorkevik).

wxMac:

- Fixed non-detection of process termination on Intel Macs by
  polling for process termination in a separate thread.

wxMGL:

- Fixed NUM_LOCK having no effect.
- Fixed wxFileExists (affecting wxImage::LoadFile).
- Implement wxGetMouseState()

wxMotif:
- Implement wxGetMouseState()

wxX11:
- Implement wxGetMouseState()

wxMSW:
- Drag and drop now works inside wxStaticBox.
- Implemented wxComboBox::SetEditable()
- Respect wxBU_EXACTFIT in wxToggleButton


2.6.3
-----

All:

- Fixed crash when loading message catalogs in Unicode build.
- Fixed crash in wxList code when building with wxUSE_STL=1 (Christoph Schulz)
- Spurious error message from wxLaunchDefaultBrowser fixed.
- Compilation fixes for (more strict) g++ 4.1
- Speed improvements to wxRegEx when matching is done in a loop such as
  during a search and replace.
- Fix regerror and regfree name conficts when built-in regex and system regex
  are both used in the same program.
- wxCondition::WaitTimeout() now returns correct value when timeout occurs.
- Bug in wxLogStream::DoLogString in Unicode builds fixed.
- Fixed Unicode builds using SunPro compiler by defining__WCHAR_TYPE__.
- wxFileName now also looks for TMPDIR on Unix.
- Fixed occasional wxThread cleanup crash.